fix: wrap location & resolve conflict

--- a/client/src/components/profile/components/camper.css
+++ b/client/src/components/profile/components/camper.css
@@ -9,6 +9,7 @@
 
 .username,
 .name,
-.bio {
+.bio,
+.location {
   overflow-wrap: break-word;
 }
